<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_weight="0"
        android:background="#fff"
        android:orientation="horizontal">

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_toLeftOf="@id/imgbtnClose"
            android:layout_toStartOf="@id/imgbtnClose"
            android:ellipsize="end"
            android:text="@string/search_options_radius"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ImageButton
            android:id="@+id/imgbtnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:background="@drawable/flat_ripple_circle"
            android:contentDescription="@string/general_btn_close"
            android:padding="8dp"
            android:src="@mipmap/ic_close_black"
            android:tint="#555" />

    </RelativeLayout>

    <View style="@style/DividerLight" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#fff"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingBottom="15dp"
        android:paddingTop="15dp">

        <NumberPicker
            android:id="@+id/numPickerSearchRadius"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:scaleX="1.4"
            android:scaleY="1.3"
            android:solidColor="#fff" />

    </LinearLayout>

    <View style="@style/DividerLight" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="#fff"
        android:gravity="center_vertical|end"
        android:orientation="horizontal"
        android:padding="5dp">

        <Button
            android:id="@+id/btnOK"
            style="@style/MaterialDialogButton"
            android:layout_width="65sp"
            android:layout_height="wrap_content"
            android:text="@string/general_btn_ok"
            android:textColor="@color/colorAccent" />

    </LinearLayout>

</LinearLayout>
