<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.LastSearchPlacesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toLeftOf="@+id/dividerVertical"
        android:layout_toStartOf="@+id/dividerVertical"
        android:background="#fff"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_card_panel"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:contentDescription="@string/fragment_last_search_places_title"
                android:src="@mipmap/ic_history_black"
                android:tint="#666" />

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="1"

                android:text="@string/fragment_last_search_places_title"
                android:textColor="#666"
                android:textSize="14sp" />

        </LinearLayout>

        <View
            style="@style/DividerLight"
            android:background="#ddd" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvPlaces"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#eee"
                android:clipToPadding="false"
                android:scrollbarStyle="outsideOverlay"
                android:scrollbars="vertical"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/layoutPlacesEmpty"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/fragment_last_search_places_not_found"
                    android:scaleType="fitCenter"
                    android:src="@mipmap/ic_big_search"
                    android:tint="#ccc" />

                <TextView
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/fragment_search_places_not_found"
                    android:textColor="#ccc"
                    android:textSize="17sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/dividerVertical"
        style="@style/DividerLightVertical"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true" />

</RelativeLayout>
